fixed overlay closure issue + fixed white-space wrapping in comments + improved heartBeat keyframe animation

--- a/components/global/Comments/CommentItem/CommentItem.module.scss
+++ b/components/global/Comments/CommentItem/CommentItem.module.scss
@@ -21,6 +21,7 @@
     font-size: 0.9rem;
     font-weight: 457;
     margin-top: 4px;
+    white-space: pre-wrap;
 }
 
 .metadataWrapper {
