--- a/components/global/Comments/CommentLikeButton/CommentLikeButton.module.scss
+++ b/components/global/Comments/CommentLikeButton/CommentLikeButton.module.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
 
     svg {
-        animation: heartBeat 0.4s ease-in;
+        animation: heartBeat 1.2s both cubic-bezier(0.45, 0.05, 0.55, 0.95);
     }
 }
 
@@ -21,12 +21,29 @@
 
 @keyframes heartBeat {
     0% {
-      transform: scale(1);
-    }
-    50% {
-      transform: scale(1.4);
-    }
-    100% {
-      transform: scale(1);
-    }
+      -webkit-transform: scale(0);
+      transform: scale(0)
   }
+
+  15% {
+      -webkit-transform: scale(1.6);
+      transform: scale(1.6)
+  }
+
+  32% {
+      -webkit-transform: scale(0.8);
+      transform: scale(0.8)
+  }
+
+  50% {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1
+  }
+
+  to {
+      -webkit-transform: scale(1);
+      transform: scale(1);
+      opacity: 1
+  }
+}
